tests/lean/277b.lean.expected.out
277b.lean:8:10-8:16: error: invalid constructor ⟨...⟩, expected type must be an inductive type with only one constructor 
  List Point
277b.lean:8:0-8:16: error: cannot evaluate code because it uses 'sorry' and/or contains errors
